--- a/portfolio-main/css/style.css
+++ b/portfolio-main/css/style.css
@@ -213,7 +213,7 @@ textarea {
 .home-hero {
   color: #fff;
   /* background: linear-gradient(to right, rgba(4, 36, 154, 0.8), rgba(4, 36, 154, 0.8)), url(../../assets/svg/common-bg.svg); */
-  background: url(../../assets/svg/bg.svg);
+  background: url(../assets/svg/bg.svg);
   background-position: center;
   height: 100vh;
   min-height: 80rem;
